fixing icon alignment

--- a/main.css
+++ b/main.css
@@ -158,7 +158,7 @@
   width: 21px;
 }
 .social-link-item-behance {
-  background-position: -79px 0;
+  background-position: -78px 0;
   width: 26px;
 }
 .social-link-item-medium {
